--- a/stylesheet.css
+++ b/stylesheet.css
@@ -7,17 +7,15 @@
     font-size: 18px;
     text-decoration: none;
     color: orange;
-    font-weight: bold;
     margin-left: 10px;
 }
 #canvas-link:hover{
     color: red;
 }
 .academic-resources, .campus-resources {
-    background-color: gray;
+    background-color: lightgray;
     padding: 15px;
     margin: 20px;
-    border-radius: 8px;
 }
 .academic-resources h2, .campus-resources h2 {
     font-size: 20px;
@@ -32,5 +30,4 @@ ul li {
 ul li a {
     text-decoration: none;
     color: rebeccapurple;
-    font-weight: bold;
 }
