--- a/stylesheet.css
+++ b/stylesheet.css
@@ -13,7 +13,7 @@
     color: red;
 }
 .academic-resources, .campus-resources {
-    background-color: lightgray;
+    background-color: lightgrey;
     padding: 15px;
     margin: 20px;
 }
