--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,6 +2,10 @@
     text-align: center;
     font-size: 24px;
 }
+.canvas-logo {
+    text-align: center;
+    margin-top: 20px;
+}
 #canvas-link {
     display: inline-block;
     font-size: 18px;
