--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,13 +2,9 @@
     text-align: center;
     font-size: 24px;
 }
-.canvas-logo {
-    text-align: center;
-    margin-top: 20px;
-}
 #canvas-link {
     display: inline-block;
-    font-size: 18px;
+    font-size: 15px;
     text-decoration: none;
     color: orange;
     margin-left: 10px;
@@ -17,7 +13,7 @@
     color: red;
 }
 .academic-resources, .campus-resources {
-    background-color: lightgrey;
+    background-color: #f0f0f0;
     padding: 15px;
     margin: 20px;
 }
@@ -26,10 +22,9 @@
 }
 ul {
     list-style-type: none;
-    padding: 0;
 }
 ul li {
-    margin: 8px 0;
+    margin: 10px;
 }
 ul li a {
     text-decoration: none;
